--- a/css/styles.css
+++ b/css/styles.css
@@ -19,19 +19,22 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 6rem;
-  margin-bottom: 6rem;
+  gap: 4rem;
+  margin-bottom: 4rem;
 }
 
 .avatar {
   width: 80px;
   height: auto;
   border-radius: 50%;
+  top: 0.5rem;
+  down: 0.5rem;
+  gap: 0.5rem;
 }
 
 .logo {
-  height: 120px;
-  border-radius: 20px;
+  height: 118px;
+  border-radius: 14px;
 }
 
 /* --- Language buttons --- */
@@ -49,7 +52,7 @@ body {
   border-radius: 50%;
   object-fit: cover;
   border: none;
-  background: transparent;
+  background: none;
 }
 
 /* --- Intro Text Section --- */
